132 the java call in queuesh does not open javaio (#133)
* fix java calls in queue.sh not opening java.io